# video-upscale

./: .gitignore  README.md  pyproject.toml  upscale.py
docker/: Dockerfile.inference  docker-compose.yml
models/: README.md
src/: color.py  nvcodec.py  pipeline.py  upscaler.py
